# Flaw

./: LICENSE  Readme
flaw/: README.md  README_eng.md  ascii.txt  flaw.py  flaw_eng.py  install.txt  installazione.md  main.py  main_eng.py  pyproject.toml
flaw/src/flaw/: __init__.py  core.py  english.py  italian.py
